# cppDemo

./: README.md
c++/bazel_study/bazel_demo1/: bazel-bazel_demo1  bazel-bin  bazel-out  bazel-testlogs
c++/bazel_study/bazel_demo1/printer/: BUILD  printer.bzl
c++/bazel_study/bazel_demo2/: README.md
c++/bazel_study/bazel_demo2/hello_world/: BUILD  rule.bzl
c++/bazel_study/bazel_demo3/zip_archive/: BUILD  rule.bzl
c++/bazel_study/bazel_demo4/: complie.sh  link.sh  main  zip_release.sh
c++/bazel_study/bazel_demo4/demo/: BUILD  compile_rule.bzl  main.cpp  myFunction.cpp  myFunction.h
c++/bazel_study/bazel_demo5/demo/: BUILD  application.bzl  link_rule.bzl  zip_rule.bzl
c++/cmake_glog/demo_shareLib/: CMakeLists.txt  main.cpp
c++/cmake_glog/demo_shareLib/lib/: libglogd.so.0.7.0
c++/cmake_glog/demo_staticLib/: CMakeLists.txt
c++/cmake_glog/demo_staticLib/glog/lib/: libglog.pc
c++/cmake_glog/demo_submodule/: CMakeLists.txt
c++/cmake_gtest_gmoke/: HelloWorld.cpp  MockMessenger.h
c++/cmake_gtest_gmoke/demo01/: CMakeLists.txt
c++/cmake_gtest_gmoke/demo02/: CMakeLists.txt  HelloWorld.h  HelloWorld_UnitTest.cpp  Messenger.h  test
c++/mixed_compilation/: cppTest.cpp  cppTest.i  c和c++混合编程详解.md
c++/mixed_compilation/ccallcpp/: a.out  cTest.c  cppPack.cpp  cppPack.hpp  cppTest.cpp  cppTest.hpp
c++/mixed_compilation/cdiffcpp/: cTest.c  cTest.i
c++/mixed_compilation/cppcallc/: a.out  cTest.h  cppTest.cpp
